--- a/css/style.css
+++ b/css/style.css
@@ -83,6 +83,29 @@ body{
 	background: white;
 }
 
+#airdate_screen{
+	background-color: black;
+	position: absolute;
+	width: 100%;
+	height: 100%;
+}
+
+#airdate_text{
+	position: inline-flex;
+	color: white !important;
+	font-family: Optima, Segoe, "Segoe UI", Candara, Calibri, Arial, sans-serif;
+	font-style: normal;
+	font-variant: normal;
+	font-weight: 500;
+	padding: 0% 10% 0% 10%;
+    margin: 0;
+    font-size: 200px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 100%;
+}
+
 #game_board{
 	height: 100%;
 	width: 100%;
@@ -500,6 +523,13 @@ body{
 	color: white;
 	text-align:center;
 }
+
+/*  IPAD SIMULATOR
+.player_question #question_revealed{
+	top: 50%;
+	position: relative;
+}
+*/
 
 .player_buzzer{
 	 text-align: center;
