--- a/css/input_name.css
+++ b/css/input_name.css
@@ -15,8 +15,8 @@ body,html{width:100%;height:100%;}
 
 #login_name{
   display:block;
-    width: 300px;
-    padding: 15px 0 15px 12px;
+    width: 100%;
+    padding: 15px 0 15px 0px;
     font-family: "Arvo";
     font-weight: 400;
     color: #377D6A;
